--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ button img {
     background-color: #333;
     border-radius: 10px;
     padding: 20px 50px;
+    display: none;
 }
 
 #showImc span {
